--- a/lipat.html
+++ b/lipat.html
@@ -13,6 +13,7 @@
           ['Eat',      2],
           ['Commute',  2],
           ['Watch TV', 2],
+          ['Sleep',    7],
           ['Sleep',    7]
         ]);
 
